--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -6,7 +6,7 @@
             </transaction-categories-sidebar>
         </div>
     </div>
-    <div [@fadeInOut] class="transactions-container">
+    <div class="transactions-container">
         <header>
             <div class="header-content">
                 <div class="float-left">
