Adding maxlength to textarea

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -119,6 +119,7 @@
                 <textarea
                   placeholder="Enter text here..."
                   (keyup)="updateValidation()"
+                  [maxLength]="editorMax"
                   formControlName="reasonText"
                 ></textarea>
               </div>
