--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -19,13 +19,13 @@
   <div class="modal-footer">
     <button 
     	type="button" 
-    	(click)="activeModal.close('cancel')"
-    	class="btn btn-secondary"
-    >Cancel</button>
-    <button 
-    	type="button" 
     	class="btn btn-primary" 
     	(click)="activeModal.close('okay')"
-    >Okay</button>    
+    >Ok</button>
+    <button 
+    type="button" 
+    (click)="activeModal.close('cancel')"
+    class="btn btn-secondary"
+  >Cancel</button>    
   </div>
 </div>
