optional config on confirm-modal

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -79,8 +79,8 @@
                 <th class="bulk_action">
                     <div *ngIf="isTransactionViewActive()" class="btn-group" 
                           ngbDropdown role="group" aria-label="Action dropdown">
-                        <button class="btn btn-sm btn-secondary" ngbDropdownToggle 
-                            [disabled]="bulkActionDisabled">
+                        <button class="btn btn-sm btn-secondary transactions__bulk_action_btn"  
+                            ngbDropdownToggle [disabled]="bulkActionDisabled">
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action" class="dropdown-menu" ngbDropdownMenu>
@@ -106,9 +106,9 @@
         </thead>
         <tbody>
             <tr *ngFor="let trx of transactionsModel | paginate: config; let i = index">
-                <td>
+                <td (click)="checkForMultiChecked($event)">
                     <input [(ngModel)]="trx.selected"
-                            type="checkbox" (click)="checkForMultiChecked($event)"> 
+                            type="checkbox"> 
                 </td>
                 <td *ngIf="isColumnVisible('type')">{{trx.type}}</td>
                 <td *ngIf="isColumnVisible('transactionId')">{{trx.transactionId}}</td>
