--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -1,6 +1,6 @@
 <div #content>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Warning</h4>
+  <div class="modal-header" [ngClass]="determineHeaderClasses()">
+    <h4 class="modal-title" id="modal-basic-title">{{modalTitle}}</h4>
     <button 
     	type="button" 
     	class="close btn btn-link" 
@@ -10,14 +10,9 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body">
-  	<div *ngIf="message; else default">
-        {{message}}
-    </div>
-    <ng-template #default>You have unsaved changes! If you leave, your changes will be lost.</ng-template>
-  </div>
+  <div class="modal-body">{{message}}</div>
   <div class="modal-footer">
-    <button 
+    <button *ngIf="isShowCancel"
     	type="button" 
     	(click)="activeModal.close('cancel')"
     	class="btn btn-secondary"
@@ -26,6 +21,6 @@
     	type="button" 
     	class="btn btn-primary" 
     	(click)="activeModal.close('okay')"
-    >Okay</button>    
+    >OK</button>    
   </div>
 </div>
