--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -21,7 +21,7 @@
     	type="button" 
     	class="btn btn-primary" 
     	(click)="activeModal.close('okay')"
-    >Ok</button>
+    >OK</button>
     <button 
     type="button" 
     (click)="activeModal.close('cancel')"
