--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -17,7 +17,7 @@
                     </h1>
                 </div>
                 <div class="float-right">
-                    <button class="btn btn-secondary btn-right" type="submit"
+                    <button class="btn btn-primary btn-right" type="submit"
                         (click)="navigateToCategories()">
                         Return to Transaction Categories
                     </button>
@@ -30,28 +30,28 @@
                 <div class="grid-row__col grid-row__col--12">
                     <div class="forms__btn-container">
                         <button
-                            class="btn btn-secondary btn-left forms__trx-btn"
+                            class="btn btn-primary btn-left forms__trx-btn"
                             type="button"
                             (click)="showPinColumns()">
                             <i class="fas fa-thumbtack"></i>
                             Pin Columns
                         </button>
                         <button
-                            class="btn btn-secondary btn-left forms__trx-btn"
+                            class="btn btn-primary btn-left forms__trx-btn"
                             type="button"
                             (click)="showRecycleBin()">
                             <i class="fas fa-trash"></i>
                             Recycle Bin
                         </button>
                         <button
-                            class="btn btn-secondary btn-left forms__trx-btn"
+                            class="btn btn-primary btn-left forms__trx-btn"
                             type="button"
                             (click)="doImport()">
                             <i class="fas fa-file-import"></i>
                             Import
                         </button>    
                         <button
-                            class="btn btn-secondary btn-left forms__trx-btn"
+                            class="btn btn-primary btn-left forms__trx-btn"
                             type="button"
                             (click)="showFilters()">
                             <i class="fas fa-filter"></i>
@@ -71,7 +71,7 @@
             <div class="grid-row forms__trx-applied-filter-row">
                 <div class="forms__btn-container">
                     <button
-                        class="btn btn-secondary btn-left forms__trx-btn"
+                        class="btn btn-primary btn-left forms__trx-btn"
                         type="button"
                         (click)="toogleAppliedFilter()"
                     >
@@ -90,7 +90,7 @@
                 <div class="grid-row__col grid-row__col--12">
                     <div class="forms__btn-container">    
                         <button
-                            class="btn btn-secondary btn-left forms__trx-btn"
+                            class="btn btn-primary btn-left forms__trx-btn"
                             type="button"
                             (click)="showTransactions()">
                             <i class="fas fa-table"></i>
