--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
@@ -36,114 +36,9 @@
         color: $white;
       } 
     }
-    
-    // .form-sidebar__links {
-    //   list-style-type: none;
-    //   margin-top: 15px;
-    //   position: relative;
-    //   .form-sidebar-item {
-    //     cursor: pointer;
-    //     border-bottom: 1px solid $white;
-    //     display: block;
-    //     padding-bottom: 15px;
-    //     padding-top: 15px;
-    //     vertical-align: middle;
-    //     &:first-child {
-    //       border-top: 1px solid $white;
-    //     }
-    //     &.selected {
-    //       background-color: $shuttleGray;
-    //       padding-bottom: 0;
-    //     }
-    //     .form-sidebar-item-box {
-    //       .btn-link {
-    //         color: $black;
-    //         float: left;
-    //         line-height: 0;
-    //         margin-left: 5px;
-    //         padding-left: 0;
-    //         padding-right: 0;
-    //         padding-top: 10px;
-    //         &:active,
-    //         &:focus,
-    //         &:hover,
-    //         &:visited {
-    //           color: $black;
-    //           text-decoration: none;
-    //         }
-    //         &.selected {
-    //           color: $white;
-    //           padding-bottom: 10px;
-    //           &:active,
-    //           &:focus,
-    //           &:hover,
-    //           &:visited {
-    //             color: $white;
-    //             text-decoration: none;
-    //           }
-    //         }
-    //       }
-    //       .amount {
-    //         color: $black;
-    //         float: right;
-    //         padding-right: 10px;
-    //       }
-    //       &.selected {
-    //         .amount {
-    //           color: $white;
-    //         }
-    //       }
-    //       @include clearfix();
-    //     }
-    //     .additional-options {
-    //       display: none;
-    //       padding: 0;
-    //       &.visible {
-    //         display: block;
-    //       }
-    //       .additional-options-list {
-    //         list-style-type: none;
-    //         .additional-item {
-    //           background-color: $white;
-    //           padding-bottom: 5px;
-    //           padding-left: 5px;
-    //           padding-top: 5px;
-    //           &:nth-child(odd) {
-    //             background-color: $seaShell;
-    //           }
-    //           &.selected {
-    //             background-color: $bombay;
-    //           }
-    //           .btn-link {
-    //             color: $black;
-    //             float: left;
-    //             line-height: 1em;
-    //             padding-left: 0;
-    //             padding-right: 0;
-    //             text-align: left;
-    //             width: 200px;
-    //             white-space: normal;
-    //             &:active,
-    //             &:focus,
-    //             &:hover,
-    //             &:visited {
-    //               color: $black;
-    //               text-decoration: none;
-    //             }
-    //           }
-    //           .btn-info {
-    //             float: right;
-    //           }
-    //           @include clearfix();
-    //         }
-    //       }
-    //     } // .additional-options
-    //     @include clearfix();
-    //   }
-    //   .transactions__filter-title {
-    //     padding-left: 1em;
-    //   }
-    // } 
+    .transactions__filter-type-list {
+      list-style-type: none;
+    }
   }
   footer {
     background-color: $mineShaft;
