--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -4,6 +4,7 @@
      <report-type-sidebar
         title="Report Coverage Dates"
         (status)="onNotify($event)"
+        [selectedReport]="selectedReport"
         [specialReports]="specialReports"
         [regularReports]="regularReports"
         >
