--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -43,7 +43,7 @@
                 name="reportTypeRadio"
                 [value]="committee_form3x_reporttype.report_type"
                 [checked]="committee_form3x_reporttype.report_type === reportTypeSelected"
-                (click)="updateTypeSelected($event)"
+                (change)="updateTypeSelected($event)"
                 formControlName="reportTypeRadio"
               />
                 <label
