filtering trx on front end temporarily

--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -61,7 +61,10 @@
           </div>
         </div>
       </div>
-      <app-transactions-table forType="3X" tableType="{{transactionsView}}">
+      <app-transactions-table 
+        forType="3X" 
+        tableType="{{transactionsView}}"
+        (filterEmitter)="applyFilters($event)">
       </app-transactions-table>
     </div>
     <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
